# unixworks

work1/: CMakeLists.txt
work1/include/: copyfile.h  filesystem.h
work1/src/: CMakeLists.txt  copyfile.cpp  filesystem.cpp  systemMain.cpp  test.txt
work2/: .clang-tidy  CMakeLists.txt
work2/include/: copyfile.h
work2/src/: CMakeLists.txt  copyfile.cpp  copymain.cpp  testdata.txt
work2/test/: CMakeLists.txt  test.cpp
